# pingy

./: Cargo.toml  README.md  Shuttle.toml  bacon.toml  config.toml  flake.nix
src/: app.rs  lib.rs  main.rs
