[package]
name = "pingy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.77"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.1"
log = "0.4.20"
reqwest = "0.11.23"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle-actix-web = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = { version = "1.26.0", features = ["full"] }
toml = "0.8.8"
url = { version = "2.5.0", features = ["serde"] }
