[package]
name = "pingy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
anyhow = "1.0.77"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.1"
lazy_static = "1.4.0"
leptos = { version = "0.5.4", features = ["ssr"] }
leptos_actix = "0.5.4"
leptos_config = "0.5.4"
leptos_meta = { version = "0.5.4", features = ["ssr"] }
leptos_router = { version = "0.5.4", features = ["ssr"] }
log = "0.4.20"
reqwest = "0.11.23"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle-actix-web = "0.35.0"
shuttle-runtime = "0.35.0"
thaw = { version = "0.1.5", default-features = false, features = ["ssr"] }
thiserror = "1.0.52"
tokio = { version = "1.26.0", features = ["full"] }
toml = "0.8.8"
url = { version = "2.5.0", features = ["serde"] }
wasm-bindgen = { version = "0.2.89", features = ["serde", "serde-serialize", "serde_json"] }

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name   
output-name = "pingy"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg	
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
